# python-ssh-mcp

./: .env.example  .gitignore  ADVANCED.md  AGENTS.md  BACKLOG.md  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTING.md  DECISIONS.md  DESIGN.md  INCIDENTS.md  README.md  SECURITY.md  TOOLS.md  fastmcp.json  hosts.toml.example  pyproject.toml
.github/: FUNDING.yml
docs/evals/: 2026-05-22-exec-run-discipline.md
runbooks/ssh-container-rollout/: SKILL.md
runbooks/ssh-deploy-verify/: SKILL.md
runbooks/ssh-disk-cleanup/: SKILL.md
runbooks/ssh-docker-incident-response/: SKILL.md
runbooks/ssh-host-healthcheck/: SKILL.md
runbooks/ssh-host-snapshot/: SKILL.md
runbooks/ssh-incident-response/: SKILL.md
runbooks/ssh-integrity-audit/: SKILL.md
runbooks/ssh-long-running-job/: SKILL.md
runbooks/ssh-os-upgrade/: SKILL.md
runbooks/ssh-systemd-diagnostics/: SKILL.md
runbooks/ssh-verify-signature/: SKILL.md
scripts/: check_annotations.py
skills/ssh-apt-autoremove/: SKILL.md
skills/ssh-apt-install/: SKILL.md
skills/ssh-apt-list/: SKILL.md
skills/ssh-apt-mark/: SKILL.md
skills/ssh-apt-remove/: SKILL.md
skills/ssh-apt-search/: SKILL.md
skills/ssh-apt-show/: SKILL.md
skills/ssh-apt-show-holds/: SKILL.md
skills/ssh-apt-upgrade/: SKILL.md
skills/ssh-broadcast/: SKILL.md
skills/ssh-cp/: SKILL.md
skills/ssh-delete/: SKILL.md
skills/ssh-delete-folder/: SKILL.md
skills/ssh-deploy/: SKILL.md
skills/ssh-docker-compose-down/: SKILL.md
skills/ssh-docker-compose-logs/: SKILL.md
skills/ssh-docker-compose-ps/: SKILL.md
skills/ssh-docker-compose-pull/: SKILL.md
skills/ssh-docker-compose-restart/: SKILL.md
skills/ssh-docker-compose-start/: SKILL.md
skills/ssh-docker-compose-stop/: SKILL.md
skills/ssh-docker-compose-up/: SKILL.md
skills/ssh-docker-cp/: SKILL.md
skills/ssh-docker-events/: SKILL.md
skills/ssh-docker-exec/: SKILL.md
skills/ssh-docker-images/: SKILL.md
skills/ssh-docker-inspect/: SKILL.md
skills/ssh-docker-logs/: SKILL.md
skills/ssh-docker-prune/: SKILL.md
skills/ssh-docker-ps/: SKILL.md
skills/ssh-docker-pull/: SKILL.md
skills/ssh-docker-restart/: SKILL.md
skills/ssh-docker-rm/: SKILL.md
skills/ssh-docker-rmi/: SKILL.md
skills/ssh-docker-run/: SKILL.md
skills/ssh-docker-start/: SKILL.md
skills/ssh-docker-stats/: SKILL.md
skills/ssh-docker-stop/: SKILL.md
skills/ssh-docker-system-df/: SKILL.md
skills/ssh-docker-top/: SKILL.md
skills/ssh-docker-volumes/: SKILL.md
skills/ssh-edit/: SKILL.md
skills/ssh-exec-run/: SKILL.md
skills/ssh-exec-run-streaming/: SKILL.md
skills/ssh-exec-script/: SKILL.md
skills/ssh-file-hash/: SKILL.md
skills/ssh-find/: SKILL.md
skills/ssh-host-alerts/: SKILL.md
skills/ssh-host-disk-usage/: SKILL.md
skills/ssh-host-info/: SKILL.md
skills/ssh-host-list/: SKILL.md
skills/ssh-host-network/: SKILL.md
skills/ssh-host-notes/: SKILL.md
skills/ssh-host-notes-append/: SKILL.md
skills/ssh-host-notes-set/: SKILL.md
skills/ssh-host-ping/: SKILL.md
skills/ssh-host-processes/: SKILL.md
skills/ssh-host-reload/: SKILL.md
skills/ssh-journalctl/: SKILL.md
skills/ssh-known-hosts-verify/: SKILL.md
skills/ssh-link/: SKILL.md
skills/ssh-mkdir/: SKILL.md
skills/ssh-mv/: SKILL.md
skills/ssh-patch/: SKILL.md
skills/ssh-read-redacted/: SKILL.md
skills/ssh-server-info/: SKILL.md
skills/ssh-session-list/: SKILL.md
skills/ssh-session-stats/: SKILL.md
skills/ssh-sftp-download/: SKILL.md
skills/ssh-sftp-list/: SKILL.md
skills/ssh-sftp-stat/: SKILL.md
skills/ssh-shell-close/: SKILL.md
skills/ssh-shell-exec/: SKILL.md
skills/ssh-shell-list/: SKILL.md
skills/ssh-shell-open/: SKILL.md
skills/ssh-sudo-edit/: SKILL.md
skills/ssh-sudo-exec/: SKILL.md
skills/ssh-sudo-read/: SKILL.md
tests/: _helpers.py  conftest.py  test_agent.py  test_alerts.py  test_apt_mutations.py  test_apt_tools.py  test_audit.py  test_audit_unit.py  test_audited_coverage.py  test_bm25_transform.py  test_broadcast.py  test_cp.py  test_docker_cmd.py  test_docker_compose_path_policy.py  test_docker_events_volumes.py  test_docker_log_guards.py  test_docker_ps_images_filters.py  test_docker_run_escalation.py  test_docker_system_df.py  test_docker_top_cp.py  test_edit_service.py  test_exec.py  test_exec_cheatsheet.py  test_exec_cheatsheet_footer.py  test_exec_policy.py  test_file_hash.py  test_hooks.py  test_host_extensions.py  test_host_list_reload.py  test_host_notes.py  test_host_output_warnings.py  test_host_policy.py  test_host_policy_validation.py  test_hosts_loader.py  test_known_hosts.py  test_link.py  test_local_path_policy.py  test_low_access_local_path.py  test_mcp_annotations.py  test_mv.py  (+30 more)
(+96 files in other folders)
