[project]
name = "python-ssh-mcp"
version = "1.0.0"
description = "SSH MCP server built on FastMCP 3 — read-only, low-access, exec, and sudo tiers"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "GPL-3.0" }
authors = [{ name = "Nightreaver" }]
dependencies = [
    # `tasks` extra pulls in `docket`, which backs the `task=TaskConfig(...)`
    # annotation on `ssh_exec_run_streaming`. The decorator validates at
    # import time (not first use), so the extra is a HARD dependency --
    # installing ssh-mcp without it crashes at server startup.
    "fastmcp[tasks]>=3.0.0,<4.0.0",
    "asyncssh>=2.17.0,<3.0.0",
    "pydantic>=2.8.0,<3.0.0",
    "pydantic-settings>=2.3.0,<3.0.0",
    "unidiff>=0.7.5,<0.8.0",
    # Windows only: required by asyncssh's Pageant backend (window-message
    # protocol). See ADR-0004 and tests/test_agent.py::test_live_agent_...
    "pywin32>=306 ; sys_platform == 'win32'",
]

[project.optional-dependencies]
# Production Redis backend for FastMCP background tasks. In-memory docket
# (pulled in via fastmcp[tasks]) works for dev; Redis is recommended in
# production where task-loss on restart matters. Install with:
#   uv pip install -e ".[tasks]"
tasks = ["redis>=5.0.0"]

# OpenTelemetry exporter. Install with:
#   uv pip install -e ".[telemetry]"
telemetry = [
    "opentelemetry-distro>=0.48b0",
    "opentelemetry-exporter-otlp>=1.27.0",
]

# Dev toolchain (pytest, linters, type checker). Install with:
#   uv pip install -e ".[dev]"
dev = [
    "pytest>=8.2.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<0.25.0",
    "ruff>=0.6.0,<0.9.0",
    "mypy>=1.10.0,<2.0.0",
]

[project.scripts]
ssh-mcp = "ssh_mcp.run_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ssh_mcp"]

# ---------- Tooling ----------

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires a live sshd on 127.0.0.1:2222 (see tests/integration/docker-compose.yml)",
    "e2e: hits real hosts declared in hosts.toml; per-host reachability is skipped, not failed",
]

[tool.ruff]
line-length = 110
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
# INC-045: rule groups expanded after the 104-finding cleanup pass.
#   E,F,W,I = pycodestyle / pyflakes / isort -- baseline
#   B       = flake8-bugbear (catches B017 broad-Exception, B008 mutable defaults)
#   UP      = pyupgrade (PEP 604 unions, modern dataclass syntax)
#   S       = bandit  (security; tests waived below)
#   SIM     = simplify (combine `with` blocks, ternaries, ...)
#   RUF     = ruff-native (catches RUF012 mutable class attrs in dataclasses)
#   ASYNC   = flake8-async -- would have caught INC-035 (cancelled-task-not-awaited)
#   PERF    = perflint  (list-comprehension misuse, redundant try/except)
#   PT      = flake8-pytest-style (consistent fixtures, parametrize ids, etc.)
#   PLE     = pylint-error (real bugs only -- not the noisy PLR/PLW)
#   TCH     = flake8-type-checking (TYPE_CHECKING-guard imports)
select = [
    "E", "F", "W", "I", "B", "UP", "S", "SIM", "RUF",
    "ASYNC", "PERF", "PT", "PLE", "TCH",
]
ignore = [
    "S101",      # pytest uses `assert` -- can't disable without rewriting every test
    "PT011",     # `pytest.raises(ValueError)` doesn't always need a `match=` -- noisy
    "ASYNC109",  # every tool intentionally takes a `timeout=` for per-call MCP override.
                 # ruff would have us push it to `asyncio.wait_for` at the call site,
                 # but the timeout is part of the tool's public signature -- the MCP
                 # client passes it. Project convention, not a bug.
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]
# FastMCP's `@mcp_server.tool` decorator calls `get_type_hints()` at registration
# time, which evaluates string annotations against the module's runtime globals.
# `from fastmcp import Context` MUST stay as a runtime import in every tool
# module -- moving it into `if TYPE_CHECKING:` makes registration fail with
# `NameError: name 'Context' is not defined`.
"src/ssh_mcp/tools/**" = ["TC001", "TC002"]
# Same problem in pydantic models: `model_rebuild()` resolves string
# annotations into actual types, so `pathlib.Path` must be importable at
# runtime even though it only appears in field annotations. Moving it under
# `TYPE_CHECKING` raises `PydanticUserError: AuthPolicy is not fully defined`.
"src/ssh_mcp/models/**" = ["TC003"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["ssh_mcp"]
mypy_path = "src"
